# DynamicSpot

./: AboutPage.qml  CMakeLists.txt  CountDown.cpp  CountDown.h  CountDown.qml  DynamicSpot.cpp  DynamicSpot.h  DynamicSpotApp.cpp  DynamicSpotApp.h  HeLogger.cpp  HeLogger.h  HeSvgItem.cpp  HeSvgItem.h  LICENCE  MainWindowManager.cpp  MainWindowManager.h  MyAutoColorHelper.cpp  MyAutoColorHelper.h  MyMainWindow.cpp  MyMainWindow.h  MyMainWindow.qml  README.md  ScheduleHost.cpp  ScheduleHost.h  ScheduleItem.cpp  ScheduleItem.h  ScheduleTestWidget.cpp  ScheduleTestWidget.h  ScheduleViewer.qml  SettingsWindow.cpp  SettingsWindow.h  SloganProvider.cpp  SloganProvider.h  TimeBanner.cpp  TimeBanner.h  TimeBanner.qml  main.cpp  res.qrc
.github/ISSUE_TEMPLATE/: milestone.md
qml/: AboutPage.qml  CountDown.qml  MyMainWindow.qml  ScheduleViewer.qml  SettingsWindow.qml  TimeBanner.qml
